--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Box Model</title>
+  <title>LAHARI</title>
 </head>
 
 <body>
   <div>
-    <p>Hello World</p>
-    <img src="./world.png" alt="day-world" />
+    <p>LAHARI World</p>
+    <img src="./world.png" alt="LAHARI_WORLD" />
   </div>
   <div>
     <p>Good Night World</p>
-    <img src="./night-world.png" alt="night-world" />
+    <img src="./night-world.png" alt="LAHARI_WORLD" />
   </div>
 
 </body>
